# rottn

./: .gitignore  .pylintrc  README.md  designdocument.md  dev-requirements.txt  dev_setup.bat  dev_update.bat  generate_api_docs.bat  pyproject.toml  requirements.txt  requirements_pypy.txt
bossfight.client/bossfight/client/: __main__.py  config.py  controls.py  gameServiceConnection.py  gameServiceManager.py  playerControls.py  player_controls.py  serverManager.py  server_manager.py  testScene.py  ui.py
bossfight.core/bossfight/core/: __init__.py  activities.py  character_bases.py  gameServiceProtocol.py  gameServiceRequest.py  mixins.py  sharedGameData.py  (+1 more)
docs/: bossfight.client.mvp.xml  bossfight.server.mvp.xml  client.gameServiceConnection.md  server_core_gsp.md
docs/api/: client.config.md  client.gameServiceConnection.md  client.playerControls.md  client.player_controls.md  client.scenes.levelScene.md  client.serverManager.md  client.server_manager.md  client.ui.md  core.activities.md  core.gameServiceProtocol.md  core.mixins.md  core.sharedGameData.md  overview.md  server.__main__.md  server.core.gameService.md  server.gameLoop.md  server.gameService.md  server.game_loop.md
docs/diagrams/: bossfight.server.mvp.xml
docs/gamedesign/: designdocument.md
rottn/client/: __main__.py  config.py  server_manager.py
rottn/core/: __init__.py
rottn/server/: __main__.py  game_loop.py
tests/: config_test.py  gameServiceProtocol_test.py  gameServiceRequest_test.py  gameService_test.py  sharedGameData_test.py  sharedGameState_test.py  testScene_test.py
(+21 files in other folders)
